--- a/public/posts/updated-api-coding-key-points.mdx
+++ b/public/posts/updated-api-coding-key-points.mdx
@@ -1,6 +1,6 @@
 # Updated API - Code Details
 
-The previous post I explained some <a href='updated-spa-coding-key-points.mdx'>SPA Code Details</a> for the second code sample. Next I summarise the main API code changes.
+The previous post I explained some <a href='updated-spa-coding-key-points.mdx'>SPA Code Details</a> for the second code sample. Next, I summarise the main API code changes.
 
 ### API Authorization Implementation
 
