--- a/public/posts/updated-spa-coding-key-points.mdx
+++ b/public/posts/updated-spa-coding-key-points.mdx
@@ -195,7 +195,7 @@ For best reliability, you could also store a refresh token in local storage and 
 ```json
 {
     "app": {
-        "apiBaseUrl":             "https://api.authsamples-dev.com/api"
+        "apiBaseUrl":             "https://api.authsamples-dev.com:446/api"
     },
     "oauth": {
         "provider":               "cognito",
